import React from 'react';
import { fireEvent, render, screen } from '@testing-library/react';
import '@testing-library/jest-dom/extend-expect';
import { createRenderer } from 'react-test-renderer/shallow';
import Topics from '../index.page';
import { useRouter } from 'next/router';
import useAuthenticationState from '@/hooks/use-authentication-context';
import useTopicSearch from '@/hooks/topics/use-topic-search';

jest.mock('next/router');
jest.mock('@/hooks/use-authentication-context');
jest.mock('@/hooks/topics/use-topic-search');

describe('<Topics />', () => {
  let searchQuery;
  let mockTopicSearch;

  beforeEach(() => {
    searchQuery = 'search';
    useRouter.mockReturnValue({
      query: {
        q: searchQuery,
      },
    });

    useAuthenticationState.mockReturnValue({ isLoggedIn: false });

    mockTopicSearch = {
      data: {
        topics: {
          items: [
            {
              id: '1',
              name: 'name',
              slug: 'slug',
            },
            {
              id: '2',
              name: 'name',
            },
          ],
        },
      },
      error: null,
      isLoading: false,
      searchVariables: { search: 'search' },
      currentSearchVariables: { search: 'currentSearch', limit: 10 },
      debounceProcessSearch: jest.fn(),
      currentPage: 1,
      processPageNumber: jest.fn(),
    };
    useTopicSearch.mockReturnValue(mockTopicSearch);
  });

  afterEach(() => {
    useRouter.mockReset();
    useAuthenticationState.mockReset();
    useTopicSearch.mockReset();
  });

  it('should mount', () => {
    render(<Topics />);

    const page = screen.getByTestId('Topics');

    expect(page).toBeInTheDocument();
  });

  it('should render correctly', () => {
    const page = createRenderer().render(<Topics />);

    expect(page).toMatchSnapshot();
  });

  it('should render correctly with no current search', () => {
    useRouter.mockReturnValue({ query: {} });
    mockTopicSearch.currentSearchVariables = {};
    mockTopicSearch.data = {};
    useTopicSearch.mockReturnValue(mockTopicSearch);

    const page = createRenderer().render(<Topics />);

    expect(page).toMatchSnapshot();
  });

  it('should process search on search input', () => {
    const search = '123';
    render(<Topics />);
    const searchInput = screen.getByTestId('SearchInput');

    fireEvent.input(searchInput, {
      target: {
        value: search,
      },
    });

    expect(mockTopicSearch.debounceProcessSearch).toBeCalledWith({
      search,
      offset: 0,
      limit: 10,
    });
  });
});
